--- a/src/index.css
+++ b/src/index.css
@@ -108,24 +108,27 @@ Form {
   }
 } */
 
-Form textarea {
+/* Form textarea {
   background-color: transparent;
   margin-top: 5px;
   height: 100px;
   font-size: 20px;
   padding: 5px;
-}
-Form textarea::placeholder {
-  font-size: 20px;
-}
-Form input {
+} */
+
+Form input,
+Form textarea {
   /* height: 25px; */
   font-size: 20px;
-  padding: 5px;
+  padding: 10px;
   border: none;
   border: #000 1px solid;
-  border-radius: 0;
+  border-radius: 5px;
 }
+Form textarea {
+  margin-top: 5px;
+}
+Form textarea::placeholder,
 Form input::placeholder {
   font-size: 20px;
 }
@@ -139,6 +142,10 @@ Form div {
   justify-content: center;
   /* align-items: center; */
   margin: 5px 0;
+}
+
+Form label {
+  color: var(--primary);
 }
 
 /* Button */
@@ -163,7 +170,7 @@ Form div {
   overflow: hidden;
 }
 .blur {
-  background-color: rgba(255, 255, 255, 0.1) !important;
+  background-color: rgba(255, 255, 255, 0.5) !important;
 }
 @supports (
   (-webkit-backdrop-filter: blur(10px)) or (backdrop-filter: blur(10px)) or
@@ -193,7 +200,24 @@ Form div {
     -ms-backdrop-filter: blur(15px);
     -o-backdrop-filter: blur(15px);
     backdrop-filter: blur(15px);
-    background-color: transparent !important;
+    /* background-color: transparent !important; */
+    background-color: rgba(0, 0, 0, 0.5) !important;
+  }
+}
+
+@supports (
+  (-webkit-backdrop-filter: blur(15px)) or (backdrop-filter: blur(15px)) or
+    (-moz-backdrop-filter: blur(15px)) or (-o-backdrop-filter: blur(15px)) or
+    (-ms-backdrop-filter: blur(15px))
+) {
+  .blackBlur {
+    -webkit-backdrop-filter: blur(15px);
+    -moz-backdrop-filter: blur(15px);
+    -ms-backdrop-filter: blur(15px);
+    -o-backdrop-filter: blur(15px);
+    backdrop-filter: blur(15px);
+    /* background-color: rgb(61, 155, 37, 0.5) !important; */
+    background-color: rgba(0, 0, 0, 0.5);
   }
 }
 
