--- a/src/App.css
+++ b/src/App.css
@@ -35,7 +35,7 @@
   top: 0 !important;
   right: 0;
   width: 100vw;
-  min-height: 500px;
+  /* min-height: 500px; */
 }
 
 .home h5 {
@@ -141,7 +141,7 @@
 }
 
 .pageContainer {
-  margin-top: 50px;
+  margin-top: 100px;
 }
 
 /* COPIED NMOW */
@@ -159,7 +159,7 @@
   box-shadow: 15px 15px 50px rgba(0, 0, 0, 0.2),
     inset 15px 15px 50px rgba(0, 0, 0, 1);
   animation: morphing 15s infinite;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 .bubble:hover {
   animation-play-state: reverse;
@@ -469,6 +469,7 @@
   .socialIcon {
     height: 40px;
     width: 40px;
+    margin: 3px;
   }
 }
 @media screen and (max-height: 500px) {
@@ -504,32 +505,43 @@
 }
 
 .logo {
-  /* border: #fff 5px solid; */
   padding: 5px 10px 0 20px !important;
+}
+
+.logoContainer {
+  display: flex;
+  flex-direction: row;
+  /* border: #fff 5px solid; */
+  padding: 0px 10px 0 20px !important;
   font-size: 25px;
   font-weight: 800;
   color: var(--secondary);
   /* color: var(--primary); */
-  font-family: var(
-    "Playfair Display",
-    --font-headings,
-    "PT Sans",
-    -apple-system,
-    BlinkMacSystemFont,
-    "Segoe UI",
-    "Roboto",
-    "Oxygen",
-    "Ubuntu",
-    "Cantarell",
-    "Fira Sans",
-    "Droid Sans",
-    "Helvetica Neue",
-    sans-serif
-  );
+  font-family: "Playfair Display", --font-headings, "PT Sans", -apple-system,
+    BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
+    "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+
   -webkit-font-smoothing: antialiased;
   letter-spacing: normal;
   line-height: 1;
   text-shadow: 1px 1px #acacac;
+}
+
+.logoIcon {
+  margin-right: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.logoText {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.smallText {
+  font-size: 0.7rem;
+  text-transform: uppercase;
+  margin-top: 2px;
 }
 
 /* .resp {
@@ -942,7 +954,7 @@ textarea:-ms-input-placeholder {
 }
 @media (max-width: 450px) {
   .element .date .line {
-    min-height: 330px;
+    min-height: 350px;
   }
 }
 @media (min-width: 601px) {
