--- a/src/index.css
+++ b/src/index.css
@@ -216,7 +216,7 @@ Form label {
     -ms-backdrop-filter: blur(15px);
     -o-backdrop-filter: blur(15px);
     backdrop-filter: blur(15px);
-    background-color: rgb(45, 110, 29, 0.8) !important;
+    background-color: rgb(45, 110, 29) !important;
     /* background-color: rgb(61, 155, 37, 0.5) !important; */
     /* background-color: rgba(0, 0, 0, 0.5); */
   }
@@ -226,6 +226,7 @@ a {
   /* color: rgb(53, 132, 93); */
   color: #fff;
   text-decoration: none;
+
   /* letter-spacing: 1px; */
 }
 
