--- a/src/App.css
+++ b/src/App.css
@@ -379,7 +379,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: center;
+  /* align-items: center; */
+  margin-left: 10%;
 }
 
 .navbarLinks {
@@ -435,8 +436,8 @@
   height: calc(100vh - 65px);
   margin-top: 65px;
   justify-content: space-around;
-  align-items: center;
-  text-align: center;
+  /* align-items: center; */
+  text-align: left;
 }
 .links p {
   color: #fff;
@@ -534,6 +535,12 @@
   /* text-shadow: 1px 1px #acacac; */
 }
 
+@media (max-width: 370px) {
+  .logoContainer {
+    font-size: 20px;
+  }
+}
+
 .logoIcon {
   margin-right: 10px;
   display: flex;
@@ -607,6 +614,7 @@ a {
 
 .menuContainer ul {
   list-style-type: none;
+  margin-left: 20px;
 }
 .menuContainer ul.open li {
   transition: all 0.3s ease-in;
@@ -779,8 +787,7 @@ a {
   -khtml-user-select: none; /* Konqueror HTML */
   -moz-user-select: none; /* Old versions of Firefox */
   -ms-user-select: none; /* Internet Explorer/Edge */
-  user-select: none; /* Non-prefixed version, currently
-                                  supported by Chrome, Edge, Opera and Firefox */
+  user-select: none; /* Non-prefixed version, currently*/
 }
 
 /* MEDIA  */
