--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,7 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 20px;
+  margin-top: 20px;
 }
 
 @media screen and (max-width: 800px) {
