--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,289 @@
 :root {
   --primary: rgb(45, 110, 29);
   --primaryLight: rgb(61, 155, 37);
+  --primaryDarker: rgb(34, 82, 22);
   --secondary: #ffffff;
   --black: #000;
   --text: #828282;
+  --background: #f8f9fa;
+  --backgroundDarker: #ececec;
+  --blur: 5px;
+  --swiper-navigation-color: rgb(45, 110, 29);
+  --swiper-pagination-color: rgb(45, 110, 29);
+  --swiper-theme-color: rgb(45, 110, 29);
 }
+
+/* INDEX.css */
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  outline: none !important;
+}
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+*:focus {
+  outline: none;
+}
+html {
+  scrollbar-width: none !important;
+  -ms-overflow-style: -ms-autohiding-scrollbar !important;
+  scroll-behavior: smooth !important;
+}
+html::-webkit-scrollbar-track {
+  display: none !important;
+}
+html::-webkit-scrollbar {
+  display: none !important;
+}
+
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden !important;
+}
+
+/* ### CONTACT ###   */
+
+.contact {
+  max-width: 100vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  margin-top: 20px;
+}
+
+@media screen and (max-width: 800px) {
+  .contact {
+    flex-direction: column;
+  }
+}
+
+.formImg {
+  /* display: none; */
+  width: 50%;
+  height: 100%;
+  background-position: center !important;
+  background-repeat: no-repeat !important;
+  background-size: cover !important;
+}
+@media screen and (max-width: 600px) {
+  .formImg {
+    /* display: block; */
+    width: 50%;
+  }
+  Form {
+    width: 50%;
+  }
+}
+
+.infoContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  margin-bottom: 60px;
+}
+
+.flexRow {
+  display: flex;
+  flex-direction: row;
+}
+@media screen and (max-width: 500px) {
+  .flexRow {
+    flex-direction: column;
+  }
+  .flexRow .button {
+    margin: 5px 0;
+  }
+}
+
+Form {
+  /* border: 1px solid lightgray; */
+  width: 90vw;
+  max-width: 500px;
+
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  /* background-color: #000; */
+}
+
+/* @media screen and (max-width: 500px) {
+  Form{
+    width: 50%;
+  }
+} */
+
+/* Form textarea {
+  background-color: transparent;
+  margin-top: 5px;
+  height: 100px;
+  font-size: 20px;
+  padding: 5px;
+} */
+
+Form input,
+Form textarea {
+  /* height: 25px; */
+  font-size: 20px;
+  padding: 10px;
+  border: none;
+  border: #000 2px solid;
+  border-radius: 5px;
+  background-color: var(--background);
+}
+Form textarea {
+  margin-top: 5px;
+}
+Form textarea::placeholder,
+Form input::placeholder {
+  font-size: 20px;
+}
+Form div {
+  /* border: 1px solid #000; */
+
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  justify-content: center;
+  /* align-items: center; */
+  margin: 5px 0;
+}
+
+Form label {
+  color: var(--primary);
+}
+
+/* Button */
+
+.button {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  height: 50px;
+  width: 200px;
+  border: 2px solid var(--black);
+  border-radius: 5px;
+  /* backdrop-filter: blur(10px); */
+  margin: 20px 5px;
+  color: var(--black);
+  text-transform: uppercase;
+  text-decoration: none;
+  font-size: 15px;
+  letter-spacing: 1.5px;
+  overflow: hidden;
+}
+.blur {
+  background-color: rgba(255, 255, 255, 0.5) !important;
+}
+@supports (
+  (-webkit-backdrop-filter: blur(10px)) or (backdrop-filter: blur(10px)) or
+    (-moz-backdrop-filter: blur(10px)) or (-o-backdrop-filter: blur(10px)) or
+    (-ms-backdrop-filter: blur(10px))
+) {
+  .blur {
+    -webkit-backdrop-filter: blur(10px);
+    -moz-backdrop-filter: blur(10px);
+    -ms-backdrop-filter: blur(10px);
+    -o-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
+    background-color: transparent !important;
+  }
+}
+.brightness80 {
+  background-color: rgba(255, 255, 255, 0.1) !important;
+}
+@supports (
+  (-webkit-backdrop-filter: blur(15px)) or (backdrop-filter: blur(15px)) or
+    (-moz-backdrop-filter: blur(15px)) or (-o-backdrop-filter: blur(15px)) or
+    (-ms-backdrop-filter: blur(15px))
+) {
+  .blur {
+    -webkit-backdrop-filter: blur(15px);
+    -moz-backdrop-filter: blur(15px);
+    -ms-backdrop-filter: blur(15px);
+    -o-backdrop-filter: blur(15px);
+    backdrop-filter: blur(15px);
+    /* background-color: transparent !important; */
+    background-color: rgba(0, 0, 0, 0.5) !important;
+  }
+}
+
+@supports (
+  (-webkit-backdrop-filter: blur(15px)) or (backdrop-filter: blur(15px)) or
+    (-moz-backdrop-filter: blur(15px)) or (-o-backdrop-filter: blur(15px)) or
+    (-ms-backdrop-filter: blur(15px))
+) {
+  .blackBlur {
+    -webkit-backdrop-filter: blur(15px);
+    -moz-backdrop-filter: blur(15px);
+    -ms-backdrop-filter: blur(15px);
+    -o-backdrop-filter: blur(15px);
+    backdrop-filter: blur(15px);
+    background-color: rgb(45, 110, 29) !important;
+    /* background-color: rgb(61, 155, 37, 0.5) !important; */
+    /* background-color: rgba(0, 0, 0, 0.5); */
+  }
+}
+
+a {
+  /* color: rgb(53, 132, 93); */
+  color: #fff;
+  text-decoration: none;
+
+  /* letter-spacing: 1px; */
+}
+
+.button {
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+}
+
+.button img {
+  width: 30px;
+  height: auto;
+}
+
+.button:hover a,
+.button:hover span {
+  color: var(--secondary) !important;
+}
+
+.button:hover {
+  /* border-color: var(--primary) !important; */
+  background-color: var(--primary);
+}
+/* 
+.button:hover a,
+.button:hover span {
+  left: 150px;
+} */
+
+@media screen and (min-width: 1000px) {
+  h1 {
+    font-size: 2.2em;
+  }
+  #container {
+    width: 50%;
+  }
+}
+
+/* /INDEX.css */
 
 /* ### HOME ### */
 
@@ -109,7 +388,7 @@
 
 .sector {
   width: calc(100vw - 50px);
-  border: 3px solid #000;
+  border: 3px solid var(--black);
   border-radius: 5px;
   display: flex;
   flex-direction: column;
@@ -141,7 +420,7 @@
 }
 
 .pageContainer {
-  margin-top: 100px;
+  margin-top: 65px;
 }
 
 /* COPIED NMOW */
@@ -341,7 +620,7 @@
   justify-content: center;
   align-items: center;
   padding: 30px 5px 0 5px;
-  max-width: 700px;
+  max-width: 900px;
   color: var(--text);
 }
 
@@ -381,6 +660,7 @@
   justify-content: space-between;
   /* align-items: center; */
   margin-left: 10%;
+  font-size: 20px;
 }
 
 .navbarLinks {
@@ -715,7 +995,7 @@ a {
   flex-direction: column-reverse;
   margin-top: 25px;
   padding: 0px !important;
-  border: 3px solid #000;
+  border: 3px solid;
   border-radius: 5px;
 }
 
@@ -887,7 +1167,10 @@ textarea:-ms-input-placeholder {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  margin: 0;
+  border: 2px solid black;
+  padding: 20px;
+  margin: 20px 0;
+  border-radius: 5px;
 }
 
 .element .date {
@@ -933,11 +1216,11 @@ textarea:-ms-input-placeholder {
   border-radius: 5px;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 800px) {
   .element .description {
     flex-direction: column;
     padding: 10px;
-    padding-left: 20px !important;
+    padding-left: 30px !important;
   }
   .element .description .logo {
     padding: 0 !important;
@@ -952,7 +1235,7 @@ textarea:-ms-input-placeholder {
     min-height: 350px;
   }
 }
-@media (min-width: 601px) {
+@media (min-width: 800px) {
   .element .description .logo img {
     width: 300px;
     height: 100%;
@@ -962,9 +1245,16 @@ textarea:-ms-input-placeholder {
 
 /* .element .description .descriptionTxt {
 } */
+
 @media (max-width: 700px) {
   .element .description .descriptionTxt {
     min-width: 210px !important;
+    margin-top: 10px;
+  }
+}
+@media (max-width: 800px) {
+  .element .description .descriptionTxt {
+    margin-top: 10px;
   }
 }
 
