--- a/src/index.css
+++ b/src/index.css
@@ -1,308 +1,472 @@
+:root {
+  --swiper-theme-color: #ffffff !important;
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  outline: none !important;
+  /* transition: all 0.75s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+	transition-delay: 0.125s; */
 }
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-*:focus {
-  outline: none;
-}
+
 html {
-  scrollbar-width: none !important;
-  -ms-overflow-style: -ms-autohiding-scrollbar !important;
-  scroll-behavior: smooth !important;
-}
-html::-webkit-scrollbar-track {
-  display: none !important;
-}
-html::-webkit-scrollbar {
-  display: none !important;
+  font-family: system-ui, -apple-system, "linksSegoe UI", "Roboto", "Ubuntu",
+    "Cantarell", "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+    "Segoe UI Symbol", "Noto Color Emoji";
+  cursor: default;
+  line-height: 1.5;
+  -moz-tab-size: 4;
+  tab-size: 4;
+  -webkit-tap-highlight-color: transparent;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+  word-break: break-word;
 }
 
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: "ModernEra", system-ui, -apple-system, BlinkMacSystemFont,
+    "Avenir Next", "Avenir", "Segoe UI", "Lucida Grande", "Helvetica Neue",
+    "Helvetica", "Fira Sans", "Roboto", "Noto", "Droid Sans", "Cantarell",
+    "Oxygen", "Ubuntu", "Franklin Gothic Medium", "Century Gothic",
+    "Liberation Sans", sans-serif;
+  color: #000;
+  text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow-x: hidden !important;
+  font-size: 16px;
+  line-height: 1.5;
+  word-break: break-word;
 }
 
-/* ### CONTACT ###   */
-
-.contact {
-  max-width: 100vw;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  padding: 20px;
-  margin-top: 20px;
+a {
+  text-decoration: none;
+  color: none;
+  color: #000000;
 }
 
-@media screen and (max-width: 800px) {
-  .contact {
-    flex-direction: column;
-  }
+a:visited {
+  color: #000000;
 }
-
-.formImg {
-  /* display: none; */
-  width: 50%;
-  height: 100%;
-  background-position: center !important;
-  background-repeat: no-repeat !important;
-  background-size: cover !important;
-}
-@media screen and (max-width: 600px) {
-  .formImg {
-    /* display: block; */
-    width: 50%;
-  }
-  Form {
-    width: 50%;
-  }
-}
-
-.infoContainer {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-  margin-bottom: 60px;
-}
-
-.flexRow {
-  display: flex;
-  flex-direction: row;
-}
-@media screen and (max-width: 500px) {
-  .flexRow {
-    flex-direction: column;
-  }
-  .flexRow .button {
-    margin: 5px 0;
-  }
-}
-
-Form {
-  /* border: 1px solid lightgray; */
-  width: 90vw;
-  max-width: 500px;
-
-  padding: 20px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  /* background-color: #000; */
-}
-
-/* @media screen and (max-width: 500px) {
-  Form{
-    width: 50%;
-  }
-} */
-
-/* Form textarea {
-  background-color: transparent;
-  margin-top: 5px;
-  height: 100px;
-  font-size: 20px;
-  padding: 5px;
-} */
-
-Form input,
-Form textarea {
-  /* height: 25px; */
-  font-size: 20px;
-  padding: 10px;
-  border: none;
-  border: #000 1px solid;
-  border-radius: 5px;
-}
-Form textarea {
-  margin-top: 5px;
-}
-Form textarea::placeholder,
-Form input::placeholder {
-  font-size: 20px;
-}
-Form div {
-  /* border: 1px solid #000; */
-
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  text-align: left;
-  justify-content: center;
-  /* align-items: center; */
-  margin: 5px 0;
-}
-
-Form label {
-  color: var(--primary);
-}
-
-/* Button */
 
 .button {
+  transition: all 0.3s ease-in-out;
+}
+
+.blogContenitor {
+  width: 100%;
+  padding: 10px;
+  display: grid;
+  grid-gap: 25px;
+  grid-template-columns: 1fr;
+  justify-items: center;
+}
+/* .blogContenitor {
+	width: 100%;
+	display : flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+} */
+
+.post {
+  max-width: 325px;
+  border: 2px solid var(--black);
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+@media (min-width: 715px) {
+  .blogContenitor {
+    padding: 20px 40px;
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media (min-width: 1168px) {
+  .blogContenitor {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+@media (min-width: 1600px) {
+  .blogContenitor {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+}
+@media (min-width: 1840px) {
+  .blogContenitor {
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  }
+}
+
+/* .posts {
+	width: 80%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+} */
+
+.imgContainer img {
+  width: 100%;
+  height: 230px;
+  object-fit: cover;
+  border-radius: 3px;
+}
+.imgContainer {
+}
+
+/* .post img:hover {
+	margin-top: -5px;
+	margin-bottom: 5px;
+} */
+
+.text {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+}
+
+.text h2 {
+  margin-bottom: 10px;
+}
+
+.description {
   display: flex;
   flex-direction: row;
-  align-items: center;
   justify-content: center;
-  height: 50px;
-  width: 200px;
-  /* border: 2px solid rgb(53, 132, 93); */
-  border: 2px solid #fff;
-  border-radius: 5px;
-  /* backdrop-filter: blur(10px); */
-  margin: 20px 5px;
-  color: rgb(53, 132, 93);
-  text-transform: uppercase;
-  text-decoration: none;
-  font-size: 15px;
-  letter-spacing: 1.5px;
+  align-items: center;
+}
+
+.post .text h2 {
+  text-align: center !important;
+}
+
+/* MENU */
+
+.menuContainer {
+  position: fixed;
   overflow: hidden;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.6) !important;
+  color: #fff;
+  opacity: 1;
+  transform: translateY(150%);
+  z-index: 2;
+  transition: all 0.35s ease-in-out;
+  /* transition-delay: 0.125s; */
 }
-.blur {
-  background-color: rgba(255, 255, 255, 0.5) !important;
+.menuContainer.open {
+  transform: translateY(0);
 }
+
 @supports (
   (-webkit-backdrop-filter: blur(10px)) or (backdrop-filter: blur(10px)) or
     (-moz-backdrop-filter: blur(10px)) or (-o-backdrop-filter: blur(10px)) or
     (-ms-backdrop-filter: blur(10px))
 ) {
-  .blur {
+  .menuContainer {
     -webkit-backdrop-filter: blur(10px);
     -moz-backdrop-filter: blur(10px);
     -ms-backdrop-filter: blur(10px);
     -o-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
-    background-color: transparent !important;
-  }
-}
-.brightness80 {
-  background-color: rgba(255, 255, 255, 0.1) !important;
-}
-@supports (
-  (-webkit-backdrop-filter: blur(15px)) or (backdrop-filter: blur(15px)) or
-    (-moz-backdrop-filter: blur(15px)) or (-o-backdrop-filter: blur(15px)) or
-    (-ms-backdrop-filter: blur(15px))
-) {
-  .blur {
-    -webkit-backdrop-filter: blur(15px);
-    -moz-backdrop-filter: blur(15px);
-    -ms-backdrop-filter: blur(15px);
-    -o-backdrop-filter: blur(15px);
-    backdrop-filter: blur(15px);
-    /* background-color: transparent !important; */
     background-color: rgba(0, 0, 0, 0.5) !important;
   }
 }
 
-@supports (
-  (-webkit-backdrop-filter: blur(15px)) or (backdrop-filter: blur(15px)) or
-    (-moz-backdrop-filter: blur(15px)) or (-o-backdrop-filter: blur(15px)) or
-    (-ms-backdrop-filter: blur(15px))
-) {
-  .blackBlur {
-    -webkit-backdrop-filter: blur(15px);
-    -moz-backdrop-filter: blur(15px);
-    -ms-backdrop-filter: blur(15px);
-    -o-backdrop-filter: blur(15px);
-    backdrop-filter: blur(15px);
-    background-color: rgb(45, 110, 29) !important;
-    /* background-color: rgb(61, 155, 37, 0.5) !important; */
-    /* background-color: rgba(0, 0, 0, 0.5); */
-  }
+/* SWIPER */
+.swiper-container {
+  width: 100vw;
+  margin-top: 65px;
+  margin-bottom: 50px;
+  background-color: #000;
+}
+.aboutUs {
+  width: 100vw;
+  margin-top: 65px;
+  margin-bottom: 50px;
+  background-color: #000;
 }
 
-a {
-  /* color: rgb(53, 132, 93); */
-  color: #fff;
-  text-decoration: none;
+/* .swiper {
+	display: flex;
+	flex-direction: row-reverse;
+} */
 
-  /* letter-spacing: 1px; */
-}
-
-.button {
-  position: relative;
+.swiperSlide {
+  width: 100vw;
+  /* height: auto; */
+  /* height: calc(100vh - 65px); */
   overflow: hidden;
-  cursor: pointer;
+  -webkit-transform-style: preserve-3d;
+  -webkit-backface-visibility: hidden;
+  -webkit-transform: translateZ(0);
+  -webkit-backface-visibility: hidden;
+}
+.slideShowImg img {
+  width: 100vw;
+  height: 77vh;
+  margin-bottom: -10px;
+  object-fit: cover;
 }
 
-.button a,
-.button span {
-  position: relative;
-  left: 0;
-  transition: all 0.35s ease-Out;
-}
-
-#dub-arrow {
-  width: 100%;
-  height: 100%;
-  /* background: rgb(53, 132, 93); */
-  /* backdrop-filter: blur(10px); */
-  left: -200px;
-  position: absolute;
-  padding: 0;
+/* .slideShowDescription > * {
+	padding: 0px 15px;
+} */
+.slideShowDescription {
   display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
+  text-align: left;
+  width: 100vw;
+  height: 33vh;
+  min-height: 270px;
+  /* margin-top: 10px; */
+  background-color: #000000;
+  color: white;
+  padding: 24px 30px;
+}
+/* .swiperSlide button {
+  background: none;
+  border: #ffffff solid 2px !important;
+  color: #fff;
+  padding: 10px 20px;
+  width: 150px !important;
+} */
+.extraDescription {
+  display: flex;
+  flex-direction: row;
   justify-content: center;
-  transition: all 0.35s ease-Out;
-  bottom: 0;
 }
 
-.button img {
-  width: 30px;
-  height: auto;
-}
-.formButton {
-  background-color: transparent !important;
-  border: rgb(53, 132, 93) 2px solid;
-}
-.formButton img {
-  margin-top: 10px;
-}
-.formButton:hover {
-  border-color: #000;
-}
-
-.button.greenColor {
-  border-color: rgb(20, 49, 13);
+/* .swiper-container-horizontal > .swiper-pagination-bullets,
+.swiper-pagination-custom,
+.swiper-pagination-fraction {
+	top: 55vh;
+	left: 0;
+	width: 100%;
+} */
+.swiper-pagination-bullet {
+  width: 8px;
+  height: 8px;
+  display: inline-block;
+  border-radius: 50%;
+  background: #fff !important;
+  opacity: 0.7;
 }
 
-.button.greenColor a,
-.button.greenColor span {
-  color: rgb(20, 49, 13);
-}
-.button.blue:hover {
-  border-color: #1da1f2;
-}
-.button.green:hover {
-  border-color: #000 !important;
-  background-color: rgb(53, 132, 93);
-}
-.button:hover #dub-arrow {
-  left: 0;
+.swiper-button-next,
+.swiper-button-prev {
+  outline: none;
 }
 
-.button:hover a,
-.button:hover span {
-  left: 150px;
-}
-
-@media screen and (min-width: 1000px) {
-  h1 {
-    font-size: 2.2em;
+@media screen and (max-width: 350px) {
+  .post {
+    max-width: 298px;
   }
-  #container {
-    width: 50%;
+
+  .slideShowDescription {
+    height: 60vh;
+
+    font-size: smaller;
   }
+}
+@media screen and (max-width: 767px) {
+  .swiper {
+    /* height: 50vh; */
+    width: 100vw;
+  }
+  .swiperSlide {
+    display: flex;
+    flex-direction: column;
+  }
+  .slideShowImg img {
+    width: 100vw;
+    height: 50vh;
+    object-fit: cover;
+    margin-bottom: -10px;
+  }
+
+  .slideShowDescription {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center !important;
+    width: 100%;
+    height: 65vh;
+    max-height: auto;
+    padding: 24px 40px;
+  }
+  .slideShowDescription > * {
+    margin: 5px 0;
+    /* padding: 0px 10px; */
+  }
+  /* .slideShowDescription button {
+    background: none;
+    border: #fff solid 2px;
+    color: #fff;
+    padding: 10px 20px;
+    width: 150px;
+    margin-top: 20px;
+  } */
+}
+@media screen and (min-width: 767px) {
+  .swiper {
+    /* height: 50vh; */
+    width: 100vw;
+  }
+  .swiperSlide {
+    display: flex;
+    flex-direction: row-reverse !important;
+  }
+  .slideShowImg img {
+    width: 50vw;
+    height: 60vh;
+    object-fit: cover;
+  }
+
+  .slideShowDescription > * {
+    margin: 15px 0;
+  }
+  .slideShowDescription {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: left;
+    width: 50vw;
+    height: 60vh;
+    padding: 64px;
+  }
+  /* .slideShowDescription button {
+    background: none;
+    border: #000000 solid 2px;
+    padding: 10px 20px;
+    width: 100px;
+  } */
+}
+
+/* SINGLE POST */
+.singlePost {
+  width: 100vw;
+  margin-top: 65px;
+  margin-bottom: 50px;
+}
+
+.singlePostImg {
+  width: 100%;
+  height: 60vh;
+  object-fit: cover;
+}
+
+.blackBackground {
+  background-color: #000;
+  color: #fff;
+  margin-top: -7px;
+}
+.title,
+.author {
+  /* width: 100vw; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  text-align: center;
+  padding: 20px 10px;
+}
+
+.singlePostGrid {
+  width: 100%;
+  padding: 20px 20px;
+  display: grid;
+  grid-gap: 25px;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
+}
+.descriptionBody {
+  padding: 20px 10px;
+}
+.descriptionBody h2 {
+  font-size: x-large;
+  text-transform: uppercase !important;
+}
+.ingridients {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 250px;
+  font-size: larger;
+  text-align: left;
+}
+.ingridientsBorder {
+  border: #000 2px solid;
+  padding: 20px;
+}
+.ingridientsBorder h2 {
+  font-size: x-large;
+  text-transform: uppercase !important;
+}
+.ingridients > * {
+  border-bottom: #d8d8dd solid 2px;
+  padding: 10px 10px;
+}
+
+@media (min-width: 770px) {
+  /* .ingridients {
+		border-right: 1px solid #d8d8d8;
+	} */
+  .ingridients > * {
+    padding: 20px 10px;
+  }
+
+  .singlePostGrid {
+    padding: 20px 50px;
+    grid-template-columns: 2fr 1fr;
+  }
+  .descriptionBody {
+    border-right: 1px solid #000;
+  }
+}
+
+/* COOL TRANSITION */
+
+.coolTransiction {
+  transition: all 0.75s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  transition-delay: 0.125s;
+}
+
+@media screen and (max-width: 350px) {
+  .slideShowDescription {
+    height: auto;
+  }
+}
+
+/* COOL TRANSITION */
+
+.coolTransiction {
+  transition: all 0.75s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  transition-delay: 0.125s;
+}
+
+/* SINGLE POST */
+
+/* FOOTER */
+
+.flex {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer {
+  border-top: #000 solid 2px;
+  padding: 40px 0;
 }
