--- a/src/App.css
+++ b/src/App.css
@@ -40,6 +40,15 @@ html::-webkit-scrollbar {
   display: none !important;
 }
 
+a {
+  color: unset;
+  text-decoration: unset !important;
+  background-color: unset;
+}
+a:hover {
+  color: unset !important;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -242,7 +251,7 @@ Form label {
 
 a {
   /* color: rgb(53, 132, 93); */
-  color: #fff;
+  /* color: #fff; */
   text-decoration: none;
 
   /* letter-spacing: 1px; */
@@ -345,6 +354,7 @@ a {
 .button1,
 .button2 {
   max-width: 150px;
+  min-width: 100px;
   border-radius: 5px;
   margin: 10px 5px;
   padding: 10px 20px;
@@ -439,11 +449,13 @@ a {
     inset 15px 15px 50px rgba(0, 0, 0, 1);
   animation: morphing 15s infinite;
   overflow: hidden;
+  margin: 20px 0;
 }
 
 @media (max-width: 800px) {
   .bubble {
     width: 80%;
+    margin-left: 10%;
   }
 }
 
@@ -1243,8 +1255,9 @@ textarea:-ms-input-placeholder {
   }
 }
 
-/* .element .description .descriptionTxt {
-} */
+.element .description .descriptionTxt {
+  min-width: 500px;
+}
 
 @media (max-width: 700px) {
   .element .description .descriptionTxt {
