--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@ html {
   -webkit-tap-highlight-color: transparent;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
-  word-break: break-word;
+  /* word-break: break-word; */
 }
 
 body {
@@ -36,13 +36,13 @@ body {
   -moz-osx-font-smoothing: grayscale;
   font-size: 16px;
   line-height: 1.5;
-  word-break: break-word;
+  /* word-break: break-word; */
 }
 
 a {
   text-decoration: none;
   color: none;
-  color: #000000;
+  /* color: #000000; */
 }
 
 a:visited {
@@ -55,11 +55,12 @@ a:visited {
 
 .blogContenitor {
   width: 100%;
-  padding: 10px;
-  display: grid;
-  grid-gap: 25px;
-  grid-template-columns: 1fr;
-  justify-items: center;
+  padding: 50px 40px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  padding-top: 40px;
 }
 /* .blogContenitor {
 	width: 100%;
@@ -71,35 +72,41 @@ a:visited {
 
 .post {
   max-width: 325px;
+  min-height: 460px;
   border: 2px solid var(--black);
   border-radius: 5px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin: 20px 10px;
 }
 
-@media (min-width: 715px) {
-  .blogContenitor {
-    padding: 20px 40px;
-    grid-template-columns: 1fr 1fr;
+.blogContenitor > * {
+  flex: 0 0 100%;
+}
+@media (min-width: 650px) {
+  .blogContenitor > * {
+    flex: 0 0 49%;
   }
 }
-@media (min-width: 1168px) {
+
+@media (min-width: 1090px) {
   .blogContenitor {
-    grid-template-columns: 1fr 1fr 1fr;
+    flex: 0 0 30%;
   }
 }
-@media (min-width: 1600px) {
+@media (min-width: 1460px) {
   .blogContenitor {
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    flex: 0 0 24%;
   }
 }
+/* 
 @media (min-width: 1840px) {
   .blogContenitor {
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   }
-}
+} */
 
 /* .posts {
 	width: 80%;
@@ -114,8 +121,8 @@ a:visited {
   object-fit: cover;
   border-radius: 3px;
 }
-.imgContainer {
-}
+/* .imgContainer {
+} */
 
 /* .post img:hover {
 	margin-top: -5px;
@@ -272,7 +279,7 @@ a:visited {
   }
 
   .slideShowDescription {
-    height: 60vh;
+    /* height: 60vh; */
 
     font-size: smaller;
   }
@@ -300,7 +307,7 @@ a:visited {
     align-items: center;
     text-align: center !important;
     width: 100%;
-    height: 65vh;
+    /* height: 65vh; */
     max-height: auto;
     padding: 24px 40px;
   }
@@ -328,7 +335,7 @@ a:visited {
   }
   .slideShowImg img {
     width: 50vw;
-    height: 60vh;
+    height: 80vh;
     object-fit: cover;
   }
 
@@ -339,10 +346,10 @@ a:visited {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: baseline;
     text-align: left;
     width: 50vw;
-    height: 60vh;
+    height: 80vh;
     padding: 64px;
   }
   /* .slideShowDescription button {
