--- a/src/Timeline.css
+++ b/src/Timeline.css
@@ -12,7 +12,7 @@ h1 {
   position: relative;
   margin: 50px auto;
   padding: 40px 0;
-  width: 1000px;
+  max-width: 1000px;
   box-sizing: border-box;
 }
 .timeline:before {
@@ -26,6 +26,7 @@ h1 {
 .timeline ul {
   padding: 0;
   margin: 0;
+  overflow: unset;
 }
 .timeline ul li {
   list-style: none;
@@ -89,6 +90,7 @@ h1 {
 .timeline ul li p {
   margin: 10px 0 0;
   padding: 0;
+  color: var(--text);
 }
 .timeline ul li .time h4 {
   margin: 0;
