--- a/src/index.css
+++ b/src/index.css
@@ -72,7 +72,7 @@ a:visited {
 .post {
   max-width: 325px;
   min-height: 460px;
-  border: 2px solid var(--black);
+  box-shadow: 0px 21px 41px -13px rgb(0 0 0 / 18%);
   border-radius: 5px;
   display: flex;
   flex-direction: column;
@@ -231,11 +231,9 @@ a:visited {
   background-color: #000;
 }
 
-/* .swiper {
-	display: flex;
-	flex-direction: row-reverse;
-} */
-
+.swiper {
+  box-shadow: 0px 21px 41px -13px rgb(0 0 0 / 18%) !important;
+}
 .swiperSlide {
   width: 100vw;
   /* height: auto; */
@@ -247,6 +245,8 @@ a:visited {
   backface-visibility: hidden;
   -webkit-transform: translateZ(0);
   transform: translateZ(0);
+  box-shadow: 0px 21px 41px -13px rgb(0 0 0 / 18%);
+  border: none;
 }
 .slideShowImg img {
   width: 100vw;
@@ -350,7 +350,7 @@ a:visited {
     width: 100%;
     /* height: 65vh; */
     max-height: auto;
-    padding: 24px 40px;
+    padding: 40px 40px;
   }
   .slideShowDescription > * {
     margin: 5px 0;
@@ -462,7 +462,7 @@ a:visited {
   text-transform: uppercase !important;
 }
 .ingridients > * {
-  border-bottom: #d8d8dd solid 2px;
+  /* border-bottom: #d8d8dd solid 2px; */
   padding: 10px 10px;
 }
 
@@ -522,11 +522,6 @@ a:visited {
   align-items: center;
 }
 
-.footer {
-  border-top: #000 solid 2px;
-  padding: 40px 0;
-}
-
 /* CONTACT FORM  */
 
 /*!
@@ -535,39 +530,6 @@ a:visited {
  * Copyright 2011-2019 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
-:root {
-  --blue: #007bff;
-  --indigo: #6610f2;
-  --purple: #6f42c1;
-  --pink: #e83e8c;
-  --red: #dc3545;
-  --orange: #fd7e14;
-  --yellow: #ffc107;
-  --green: #28a745;
-  --teal: #20c997;
-  --cyan: #17a2b8;
-  --white: #fff;
-  --gray: #6c757d;
-  --gray-dark: #343a40;
-  --primary: #007bff;
-  --secondary: #6c757d;
-  --success: #28a745;
-  --info: #17a2b8;
-  --warning: #ffc107;
-  --danger: #dc3545;
-  --light: #f8f9fa;
-  --dark: #343a40;
-  --breakpoint-xs: 0;
-  --breakpoint-sm: 576px;
-  --breakpoint-md: 768px;
-  --breakpoint-lg: 992px;
-  --breakpoint-xl: 1200px;
-  --font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI",
-    Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
-    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas,
-    "Liberation Mono", "Courier New", monospace;
-}
 
 *,
 *::before,
@@ -627,7 +589,6 @@ h4,
 h5,
 h6 {
   margin-top: 0;
-  /* margin-bottom: 0.5rem; */
 }
 
 p {
@@ -772,7 +733,6 @@ th {
 
 label {
   display: inline-block;
-  /* margin-bottom: 0.5rem; */
 }
 
 button {
@@ -921,7 +881,6 @@ h6,
 .h4,
 .h5,
 .h6 {
-  /* margin-bottom: 0.5rem; */
   font-weight: 500;
   line-height: 1.2;
 }
@@ -956,6 +915,7 @@ h6,
   font-size: 1rem;
 }
 
+/* 
 .lead {
   font-size: 1.25rem;
   font-weight: 300;
@@ -984,13 +944,6 @@ h6,
   font-weight: 300;
   line-height: 1.2;
 }
-
-/* hr {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-  border: 0;
-  border-top: 1px solid rgba(0, 0, 0, 0.1);
-} */
 
 small,
 .small {
@@ -1238,6 +1191,14 @@ pre code {
   padding-left: 15px;
 }
 
+@media (max-width: 450px) {
+  .col-md-12 {
+    padding: 0 !important;
+  }
+  .ftco-section {
+    padding: 0 !important;
+  }
+}
 .col {
   -ms-flex-preferred-size: 0;
   flex-basis: 0;
@@ -11211,19 +11172,15 @@ h5,
   border: 1px solid rgba(0, 0, 0, 0.1);
 }
 .form-control::-webkit-input-placeholder {
-  /* Chrome/Opera/Safari */
   color: rgba(0, 0, 0, 0.3) !important;
 }
 .form-control::-moz-placeholder {
-  /* Firefox 19+ */
   color: rgba(0, 0, 0, 0.3) !important;
 }
 .form-control:-ms-input-placeholder {
-  /* IE 0+ */
   color: rgba(0, 0, 0, 0.3) !important;
 }
 .form-control:-moz-placeholder {
-  /* Firefox 18- */
   color: rgba(0, 0, 0, 0.3) !important;
 }
 .form-control:focus,
@@ -11379,3 +11336,5 @@ textarea.form-control {
   font-size: 16px;
   font-weight: bold;
 }
+
+/**/
