--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,9 @@
 
 /* INDEX.css */
 
+.mb-5 {
+  margin-bottom: 5px;
+}
 * {
   margin: 0;
   padding: 0;
@@ -141,7 +144,7 @@ body {
   flex-direction: row;
   justify-items: baseline;
   align-items: center;
-  padding-left: 20px;
+  /* padding-left: 20px; */
 }
 
 @media (max-width: 1200px) {
