--- a/src/index.css
+++ b/src/index.css
@@ -245,7 +245,7 @@ a:visited {
   backface-visibility: hidden;
   -webkit-transform: translateZ(0);
   transform: translateZ(0);
-  box-shadow: 0px 21px 41px -13px rgb(0 0 0 / 18%);
+  /* box-shadow: 0px 21px 41px -13px rgb(0 0 0 / 18%); */
   border: none;
 }
 .slideShowImg img {
@@ -268,9 +268,10 @@ a:visited {
   height: 33vh;
   min-height: 270px;
   /* margin-top: 10px; */
-  background-color: var(--background);
+  /* background-color: var(--background); */
   color: black;
   padding: 24px 30px;
+  margin-bottom: 20px;
 }
 .slideShowDescription h5,
 .text h5 {
@@ -349,7 +350,7 @@ a:visited {
     text-align: center !important;
     width: 100%;
     /* height: 65vh; */
-    max-height: auto;
+    min-height: 50vh;
     padding: 40px 40px;
   }
   .slideShowDescription > * {
@@ -392,6 +393,7 @@ a:visited {
     width: 50vw;
     height: 80vh;
     padding: 64px;
+    margin-bottom: unset;
   }
   /* .slideShowDescription button {
     background: none;
@@ -664,12 +666,10 @@ sup {
 }
 
 a {
-  color: #007bff;
   text-decoration: none;
   background-color: transparent;
 }
 a:hover {
-  color: #0056b3;
   text-decoration: underline;
 }
 
